--- a/rest/build.gradle
+++ b/rest/build.gradle
@@ -16,5 +16,7 @@ dependencies {
     compile 'org.glassfish.jersey.core:jersey-server:2.22.2'
     compile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.22.2'
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.2'
+    // https://mvnrepository.com/artifact/io.swagger/swagger-jersey-jaxrs
+    compile 'io.swagger:swagger-jersey2-jaxrs:1.5.0'
     testCompile 'junit:junit:4.12'
 }
